Homework 5 Comments form Nikola

--- a/L5_24_03/html/HW-L5.html
+++ b/L5_24_03/html/HW-L5.html
@@ -59,6 +59,7 @@
                     <span class="personalInfo">0886556677</span>
                 </div>
             </td>
+            <!- Какво точно постигаш със този таг? Поне аз не мога да видя смисъл от него, най-малкото дори няма стил съответстващ на този клас ->
             <td class="background"></td>
             </tr>
             <tr>
