--- a/L4_18_03/Homework-l4/HW-18_03_page_Earth.html
+++ b/L4_18_03/Homework-l4/HW-18_03_page_Earth.html
@@ -16,7 +16,11 @@
                         <td width="40%"><a href="HW-18_03_page_Gallery.html">Gallery</a></td>
                     </tr>
                     <tr>
-                        <td><a href="HW-18_03_page1.html">Planets > Earth</a></td>
+                        <!-- Попринцип, линкът трябва да е само върху "Planets". Тъй като реално Earth е страницата, на която се намираме вмомента. -->
+                        <td>
+                            <a href="HW-18_03_page1.html">Planets </a> 
+                            <span> > Earth</span>
+                        </td>
                     </tr>
                 </thead>
             </table>
@@ -43,6 +47,7 @@
                 <thead>
                     <tr>
                         <td width="45%">
+                            <!-- Много ме радва избора на песента :)  -->
                             <audio src="Valia.mp3" controls type="audio/mpeg">
                         </td>
                         <td width="65%">
