--- a/L4_18_03/Homework-l4/HW-18_03_page_ContactUs.html
+++ b/L4_18_03/Homework-l4/HW-18_03_page_ContactUs.html
@@ -28,8 +28,11 @@
                     <tr>
                         <td>
                             <h2>Contact us</h2>
-                            <p>If you have any questions about anything related to our site please feel free to ask us with the form below.</br>
-                            You can order a personal horoscope here.</p>
+                            <!-- Не е лоша идея да се вижда, къде се затваря параграфа. Ако поставиш ентер в края на текста, това няма да промени самия параграф, просто ще направи кода по-четим -->
+                            <p> If you have any questions about anything related to our site please feel free to ask us with the form below.
+                                </br>
+                                You can order a personal horoscope here.
+                            </p>
                             <form action="serverSimulation.html" method="get">
                                 <div>Your name: <input type="text" name="yourName" required /></div><br>
                                 <div>Email: <input type="text" name="eMail" required /></div><br>
@@ -42,6 +45,11 @@
                                 </div>
                                 </br>
                                 <div>Your birthday: <input type="date">
+                                    <!-- Използването на <footer> в тази ситуация не е най-уместното. 
+                                        Ако искаш да сложиш семантичен таг тук, по-добре използвай <details>
+                                    
+                                        <footer> се използва в ситуации, в които искаме да поставим еленент в долната част на дадена секция.
+                                        В твоята ситуация, <footer> се връзва за бутоните отдолу, тък като секцията ти е самата форма -->
                                     <footer><i>*In case you would like to order a horoscope</i></footer></div>
                                 </br>
                                 <div>Your birth hour: <input type="time">
@@ -51,11 +59,13 @@
                                     <footer><i>*In case you would like to order a horoscope</i></footer></div>
                                 </br>
                                 <div>Your message: <textarea></textarea></div></br>
+                                    <!-- Супер е, че си погледнала други варианти за бутони -->
                                     <input type="reset" value="Reset">
                                     <input type="submit" value="Send">
                                 </form>
                             </td>
                             <br>
+                            <!-- На другите страници беше сложила, alt атрибут. Тук може също да го поставиш -->
                             <td><img src="sol.jpg" width="500"></td>
                         </tr>
                     </thead>
