--- a/L6_25_03/html/HW-L6_page_ContactUs.html
+++ b/L6_25_03/html/HW-L6_page_ContactUs.html
@@ -7,14 +7,16 @@
         <link rel="stylesheet" type="text/css" href="../CSS/HW-L6_page1_style.css" />
     </head>
     <body>
-        <nav>
-        <a href="HW-L6_page1.html"><img src="../Gallery/Logo.png"></a>
-        <ul class="navigation"> 
-            <li><a href="http://www.skyandtelescope.com/astronomy-news/solar-system/" target="_blank">News</a></li>
-            <li><a href="HW-L6_page_ContactUs.html">Contact us</a></li>
-            <li><a href="HW-L6_page_Gallery.html">Gallery</a></li>
-        </ul>
-        </nav>
+        <header class="mainPageHeader">
+            <nav>
+                <a href="HW-L6_page1.html"><img src="../Gallery/Logo.png"></a>
+                <ul class="navigation"> 
+                    <li><a href="http://www.skyandtelescope.com/astronomy-news/solar-system/" target="_blank">News</a></li>
+                    <li><a href="HW-L6_page_ContactUs.html">Contact us</a></li>
+                    <li><a href="HW-L6_page_Gallery.html">Gallery</a></li>
+                </ul>
+            </nav>
+        </header>
 
         <main>
             <div class="content">
