--- a/L24_10_06/task1.html
+++ b/L24_10_06/task1.html
@@ -17,12 +17,11 @@
             <img src="Images/Mute.png" class="muteUnmuteButton"/>
         </div>
         <div class="infoPlayWindow">
-            <h1 class="nameOfTheSong"></h1>
-            <h2 class="nameOfTheArtist"></h2>
+            <p id="nameOfTheSong"></p>
         </div>
     </div>
     
-    <script src="task1.js"></script>
+    <script src="task1_2.js"></script>
 </body>
 
 </html>
